2012-09-10  Keith Seitz  <keiths@redhat.com>

	PR gdb/13483
	* gdb.cp/converts.cc (A::A): Add ctor.
	(A::member_): Add member.
	(enum my_enum): New enumeration.
	(main): Add calls to foo1_7 with various
	permitted arguments.
	* gdb.cp/converts.exp: Add tests for boolean
	conversions permitted by the standard.

2012-09-08  Khoo Yit Phang  <khooyp@cs.umd.edu>

	Replace -nw option with $INTERNAL_GDBFLAGS in "xgdb" tests to
	avoid spurious results due to ~/.gdbinit.
	* gdb.gdb/complaint.exp (setup_test): Replace -nw option with
	$INTERNAL_GDBFLAGS in run command.
	* gdb.gdb/observer.exp (setup_test): Ditto.
	* gdb.gdb/selftest.exp (test_with_self): Ditto.
	* gdb.gdb/xfullpath.exp (setup_test): Ditto.

2012-09-06  Doug Evans  <dje@google.com>

	* boards/fission.exp: New file.

	* gdb.python/py-value.exp: Use clean_restart.

2012-09-05  Doug Evans  <dje@google.com>

	* gdb.base/info-macros.c: Fix whitespace.

2012-08-28  Pedro Alves  <palves@redhat.com>

	PR gdb/14428

	* gdb.base/pc-fp.exp: Adjust expected output of 'info registers pc fp'.

2012-08-27  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* gdb.base/break-caller-line.c: New file.
	* gdb.base/break-caller-line.exp: New file.

2012-08-27  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* gdb.ada/rdv_wait.exp (set debug-file-directory): New command.
	* gdb.arch/i386-cfi-notcurrent.S: New file.
	* gdb.arch/i386-cfi-notcurrent.exp: New file.

2012-08-27  Wei-cheng Wang  <cole945@gmail.com>
	    Yao Qi <yao@codesourcery.com>
	    Pedro Alves <palves@redhat.com>

	* gdb.base/memattr.exp (delete_memory, region_pass, region_fail):
	New procedures.
	(top level): Add overlap checking tests.

2012-08-24  Tom Tromey  <tromey@redhat.com>

	* lib/gdb.exp (skip_unwinder_tests): Don't leave 'ok' set if
	gdb_test_multiple fails for other reasons.

2012-08-24  Yao Qi  <yao@codesourcery.com>

	* lib/gdb.exp (skip_unwinder_tests): Remove pass.

2012-08-23  Pedro Alves  <palves@redhat.com>
