@@ -28,3 +28,8 @@ set_board_info compiler "[find_gcc]"
 # This requires a relatively recent version of gcc (>4.7) and gold
 # for the linker.
 set_board_info debug_flags "-gdwarf-4 -gsplit-dwarf -Wl,--gdb-index"
+
+# This is needed otherwise dejagnu tries to rsh to host "fission".  Blech.
+# Double blech: set_board_info only sets the value if not already set.
+unset_board_info isremote
+set_board_info isremote 0
